scrollbar removed simulation fixes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -87,3 +87,13 @@ a {
 #nprogress .spinner .spinner-icon {
   display: none !important;
 }
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
